# Mini-ORM

./: .gitignore  404.html  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-build.txt  requirements-publish.txt  sitemap.xml
api/core/: index.html
api/package/: index.html
api/ports/: index.html
development/: index.html
docs/: README.md  development.md  examples.md  examples_sources.js  getting-started.md  index.md
docs/api/: core.md  package.md  ports.md
docs/sql/: overview.md  repository.md  schema-indexing.md
docs/vector/: chroma.md  faiss.md  overview.md  pgvector.md  qdrant.md
examples/: README.md  index.html
examples/sql/: 01_basic_crud.py  02_query_conditions.py  03_repository_utilities.py  04_schema_and_indexes.py  05_validation_and_error_cases.py  06_dialect_preview.py  (+12 more)
getting-started/: index.html
mini_orm/: __init__.py
scripts/: build_lib.sh
search/: search_index.json
tests/: _codec_roundtrip_mixin.py  test_async_repository_mysql.py  test_async_repository_postgres.py  test_async_repository_sqlite.py  test_async_vector_repository.py  test_conditions_query_builder.py  test_core_models_metadata.py  test_db_api_adapter_and_dialects.py  test_repository_mysql.py  test_repository_postgres.py  test_repository_sqlite.py  test_schema_indexes.py  test_session.py  test_validated_model.py  test_validated_repository_sqlite.py  test_vector_chroma_store.py  test_vector_faiss_store.py  test_vector_inmemory_repository.py  test_vector_pgvector_store.py  test_vector_qdrant_store.py  test_vector_store_repository.py  vector_test_helpers.py
(+77 files in other folders)
