[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-orm"
version = "0.1.0"
description = "Lightweight Python ORM-style toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]
faiss = ["faiss-cpu>=1.7.4", "numpy>=1.24.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["mini_orm*"]
